# Transcritor-Pro

./: .gitignore  README.md  main.py  pyproject.toml
