[project]
name = "whisper"
version = "0.1.0"
description = "Whisper transcription with Streamlit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "faster-whisper",
    "torch",
    "torchvision",
    "torchaudio",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
